--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,6 +40,7 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 269
+    px;
     height: 471px;
 }
