--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,7 +40,6 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269
-    px;
+    width: 269px;
     height: 471px;
 }
